--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1{
   background-image: linear-gradient(90deg,green,black);
   background-clip: text;
   background-repeat: no-repeat;
-  background-size: 0% 100% ;
+  background-size: 25% 100% ;
   animation: scroll-reveal linear forwards;
   animation-timeline: view();
 }
@@ -52,6 +52,7 @@ h1{
   width: 100%;
   height: 100%;
   z-index: -1;
+  object-fit: cover;
 
 }
 .m{
