--- a/style.css
+++ b/style.css
@@ -1,63 +1,113 @@
+
 body{
-  margin: 0;
+margin: 0;
 
 }
 h1{
-  font-size: 7rem;
-  color: white;
- ]
+font-size: 10rem;
+color: white;
+position: sticky;
+top: 50%;
+
 }
 
 .scroll-reveal span{
-  color:hsl(0 0% 100%/0.2);
-  font-size: 1rem;
-  padding: 2rem;
-  background-image: linear-gradient(90deg,black,black);
-  background-clip: text;
-  background-repeat: no-repeat;
-  background-size: 0% 100% ;
-  animation: scroll-reveal linear forwards;
-  animation-timeline: view();
+color:hsl(0 0% 100%/0);
+font-size: 2rem;
+padding: 2rem;
+background-image: linear-gradient(90deg,black,rgb(0, 0, 0));
+background-clip: text;
+background-repeat: no-repeat;
+background-size: 0% 100% ;
+animation: scroll-reveal linear forwards;
+animation-timeline: view();
 }
 .scroll-reveal p span{
-  animation-range-start: cover 10vh;
-  animation-range-end: cover 50vh;
+animation-range-start: cover 5vh;
+animation-range-end: cover 35vh;
 }
 @keyframes scroll-reveal{
-  to{background-size: 100% 100%;
-  }
+to{
+  background-size: 100% 100%;
 }
+}
+.scroll-reveal{
+  padding:2px;
+  text-align: center;
+
+}
+
 .content{
-  background-color: white;
-  padding: 30px;
-  
+
+  background-color: rgba(255, 247, 247, 0.87);
+font-size: 1rem;
+
 }
 .wrap{
-  height: 100vh;
-  overflow-y: auto;
-  overflow-x: hidden;
-  perspective: 10px;
+height: 100vh;
+overflow-y: auto;
+overflow-x: hidden;
+perspective: 10px;
 }
 .bann{
-  position: relative;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100%;
-  transform-style: preserve-3d;
-  z-index: -1;
+position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100%;
+transform-style: preserve-3d;
+z-index: -1;
+object-fit: cover;
 }
 .m,.t{
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+position: absolute;
+width: 100%;
+height: 123%;
+z-index: -1;
+}
+.m{
+transform: translateZ(-10px) scale(2);
+}
+.t{
+transform: translateZ(0px) scale(1.1);
+}
+.content2{
+  color: white;
+  background-image: url(./img-07\ -\ Copy.jpg);
+  min-height: 500px;
+  background-repeat: no-repeat;
+  object-fit: contain;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.wrap2{
+  height: 100vh;
+overflow-y: auto;
+overflow-x: hidden;
+perspective: 10px;
+  
+}
+.desert{
+  text-align: center;
+  position: relative;
+display: flex;
+justify-content: center;
+align-items: center;
+height: 100%;
+transform-style: preserve-3d;
+z-index: -1;
+}
+.desert h1{
+  z-index: -1;
+}
+.desert p{
   z-index: -1;
 
 }
-.m{
-  transform: translateZ(-10px) scale(2);
+.desert h1{
+  transform: translateZ(5px) scale(0.7); 
 }
-.t{
-  transform: translateZ(-10px) scale();
-}
+.desert p{
+  transform: translateZ(-5px) scale(1.5);
+  }
