--- a/style.css
+++ b/style.css
@@ -62,7 +62,7 @@ object-fit: cover;
 .m,.t{
 position: absolute;
 width: 100%;
-height: 123%;
+
 z-index: -1;
 }
 .m{
@@ -74,40 +74,52 @@ transform: translateZ(0px) scale(1.1);
 .content2{
   color: white;
   background-image: url(./img-07\ -\ Copy.jpg);
-  min-height: 500px;
+  height: 500px;
   background-repeat: no-repeat;
-  object-fit: contain;
   background-size: cover;
   background-attachment: fixed;
+  
 }
 
 .wrap2{
-  height: 100vh;
+  height: 300px;
 overflow-y: auto;
 overflow-x: hidden;
 perspective: 10px;
   
 }
-.desert{
+.desert h1{
   text-align: center;
   position: relative;
-display: flex;
-justify-content: center;
-align-items: center;
-height: 100%;
-transform-style: preserve-3d;
-z-index: -1;
-}
-.desert h1{
+  align-items: center;
+  transform-style: preserve-3d;
   z-index: -1;
 }
 .desert p{
+padding-block: 30PX;
+ text-align: center;
+ font-size: 16PX;
+}
+.desert h1 p{
   z-index: -1;
-
+  
 }
 .desert h1{
-  transform: translateZ(5px) scale(0.7); 
+  position: sticky;
+  top: 40px;
+  padding-top: 20px;
+}
+.desert h1{
+  transform: translateZ(-10px) scale(1); 
 }
 .desert p{
-  transform: translateZ(-5px) scale(1.5);
+  transform: translateZ(8px) scale(1.1);
+  }
+  .wrap2 {
+    -ms-overflow-style: none; /* for Internet Explorer, Edge */
+    scrollbar-width: none; /* for Firefox */
+    overflow-y: scroll;
+  }
+  .wrap2::-webkit-scrollbar {
+    display: none; /* for Chrome, Safari, and Opera */
   }
